--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>js-localstorage</title>
 </head>
-<body>
+<body class="day">
 
   <p>
-    You have visited this site <span>1</span> time(s)!
+    You have visited this site <span id="counter">1</span> time(s)!
   </p>
   <main>
     <h1>Choose A Theme!</h1>
     <div>
-      <button>Day</button>
-      <button>Night</button>
+      <button id="daybtn">Day</button>
+      <button id="nightbtn">Night</button>
     </div>
   </main>
 
